gitops/opa/constraints/advanced-constraints/constraint-require-seccomp.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireSeccomp
metadata:
  name: require-seccomp-profile
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - kube-system
      - kube-public
      - kube-node-lease
      - ingress-nginx
      - local-path-storage
  parameters:
    allowedProfiles:
      - "RuntimeDefault"
      - "Localhost"
